[package]
name = "rusty_chat_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
log = "0.4.20"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.195", features = ["derive"] }
time = { version = "0.3.31", features = ["formatting"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "net", "sync", "signal"] }
toml = "0.8.8"
uuid = { version = "1.6.1", features = ["v4"] }
